--- a/scss/_bootstrap-variables.scss
+++ b/scss/_bootstrap-variables.scss
@@ -44,7 +44,7 @@ $colors: (
 );
 
 $theme-colors: (
-  primary:                        $blue,
+  primary:                        #7ab800,
   secondary:                      $gray-300,
   success:                        $green,
   info:                           $cyan,
